Adding homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pokemon-unite-ui-react",
+  "homepage": "https://tcov189.github.io/pokemon-unite-ui-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
