--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./pokemon-unite-ui-react",
+  "theme_color": "#b91c1d",
+  "background_color": "#b91c1d",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait"
 }
